--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,13 @@
             <version>4.1.4.Final</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.msgpack/msgpack -->
+        <dependency>
+            <groupId>org.msgpack</groupId>
+            <artifactId>msgpack</artifactId>
+            <version>0.6.12</version>
+        </dependency>
+
     </dependencies>
 
 
