--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,12 @@
         </dependency>
 
         <dependency>
+            <groupId>org.jboss.marshalling</groupId>
+            <artifactId>jboss-marshalling-serial</artifactId>
+            <version>1.4.11.Final</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.jibx</groupId>
             <artifactId>jibx-run</artifactId>
             <version>1.2.6</version>
