--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,17 @@
             <version>1.2.6</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka-clients</artifactId>
+            <version>0.10.1.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka-streams</artifactId>
+            <version>0.10.1.0</version>
+        </dependency>
     </dependencies>
 
 
