--- a/pom.xml
+++ b/pom.xml
@@ -82,10 +82,11 @@
             <!-- keep jstorm out of the jar-with-dependencies -->
             <!-- <scope>provided</scope> -->
         </dependency>
+
         <dependency>
-            <groupId>com.alibaba.jstorm</groupId>
-            <artifactId>jstorm-all</artifactId>
-            <version>2.2.1</version>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>4.3.9.RELEASE</version>
         </dependency>
     </dependencies>
 
