--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,17 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>io.reactivex.rxjava2</groupId>
+            <artifactId>rxjava</artifactId>
+            <version>2.1.8</version>
+        </dependency>
+        <dependency>
+            <groupId>io.reactivex.rxjava2</groupId>
+            <artifactId>rxandroid</artifactId>
+            <version>2.0.1</version>
+            <type>aar</type>
+        </dependency>
 
     </dependencies>
 
