--- a/pom.xml
+++ b/pom.xml
@@ -88,13 +88,17 @@
         <dependency>
             <groupId>io.reactivex.rxjava2</groupId>
             <artifactId>rxjava</artifactId>
-            <version>2.1.8</version>
+            <version>2.1.14-RC1</version>
         </dependency>
         <dependency>
             <groupId>io.reactivex.rxjava2</groupId>
             <artifactId>rxandroid</artifactId>
-            <version>2.0.1</version>
-            <type>aar</type>
+            <version>2.0.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>25.1-jre</version>
         </dependency>
 
     </dependencies>
